--- a/css/print.css
+++ b/css/print.css
@@ -14,6 +14,13 @@
             content: none !important;
         }
 
+
+
+        #payment-summary .panel-default {
+            background-color: #f5f5f5 !important;
+            
+        }         
+
 	}
 
     .no-print, .no-print *
@@ -31,3 +38,9 @@
       a[href]:after {
         content: none !important;
       }
+
+
+        #payment-summary .panel-default {
+            background-color: #f5f5f5 !important;
+            
+        } 
