--- a/css/app.css
+++ b/css/app.css
@@ -23,10 +23,10 @@ body {
 
     
         .panel-body ul li {
-            padding-bottom: 10px;
+            padding-bottom: 10px;22
         }
         .panel-body {
-            height: 1100px;
+            height: 1200px;
         }
 
 .container .jumbotron.banner, 
@@ -68,4 +68,10 @@ body {
 
 .container.question-answer p {
         margin-bottom: 30px;
+}
+
+.container.speakers img {
+        width: 100%;
+        height: auto;
+        margin-bottom: 20px;
 }
