--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1,5 +1,6 @@
-@import url("https://fonts.googleapis.com/css?family=Lato:300,400,700");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,300italic&subset=latin,vietnamese");
 /*!
+ * @import url("https://fonts.googleapis.com/css?family=Lato:300,400,700");
  * bootswatch v3.3.6
  * Homepage: http://bootswatch.com
  * Copyright 2012-2015 Thomas Park
