--- a/css/app.css
+++ b/css/app.css
@@ -196,8 +196,10 @@
 
 
 /* NEW BANNER */
+    
+    .no-display {display: none}
 
-  #header-image {
+    #header-image {
       position: relative; box-sizing: 
       border-box; margin: 0 !important; top:-10px; 
       background-color: #1A4F9B;
@@ -212,6 +214,11 @@
           font-style: italic;
     }
 
+    #preloader {
+        position: relative;
+        top:0px;
+        left: 0px;
+    }
 
     .banner-logo {
         position: absolute;
@@ -240,8 +247,19 @@
         width: 42%;
         max-width: 660px;
         min-height: 60px;
+
+
+        -webkit-animation-duration: 1.75s;
+        -moz-animation-duration: 1.75s;
+        -ms-animation-duration: 1.75s;
+        -o-animation-duration: 1.75s;
         animation-duration: 1.75s;
-        animation-delay: 0.1s;
+
+        -webkit-animation-delay: 0.6s;
+        -moz-animation-delay: 0.6s;
+        -ms-animation-delay: 0.6s;
+        -o-animation-delay: 0.6s;
+        animation-delay: 0.6s;
     }
 
     .main-title.en {
