--- a/css/print.css
+++ b/css/print.css
@@ -15,16 +15,26 @@
         }
 
 
+        #rego-summary {
+            background-color: #fff !important;
+        }
+
+        #rego-summary td, 
+        #rego-summary div, 
+        #rego-summary p, 
+        #rego-summary li {
+            color:#000;
+        }
 
         #payment-summary .panel-default {
-            background-color: #f5f5f5 !important;
-            
+            background-color: #fff !important;
         }         
 
-
-        #rego-summary {
-            background-color: #f5f5f5 !important;
+        #rego-summary .well {
+            background-color: #fff !important;
+            color:black;
         }
+
 
 	}
 
