--- a/css/register.css
+++ b/css/register.css
@@ -11,7 +11,7 @@
         }
 
         input.form-control:focus, select.form-control:focus, textarea.form-control:focus {
-            border-bottom: 3px solid red !important;
+            border-bottom: 3px solid steelblue  !important;
         }
 
       
@@ -46,15 +46,6 @@
             font-size:small;
         }
 
-        /* VALIDATION ERRORS */
-        input.validate-error {
-            background: rgb(251, 221, 226);
-            
-        }
-        label.validate-error {
-            color: #FF8B8B;
-            font-weight: normal !important;
-        }
    
         ul.country-list li.country{
             color:#333 !important;
@@ -69,10 +60,10 @@
 
         
         .well-offset-color {
-            border: 1px solid #86A6C5 !important;
+            border: 1px solid #000 !important;
             /*background-color: #2b3e50 !important;*/
             min-height: 350px !important;
-            border-radius: 15px;
+            border-radius: 0px;
 
         }
             .well-offset-color table {
@@ -80,12 +71,12 @@
             }
 
             .well-offset-color table td {
-                font-size: 120% !important;
+                /* font-size: 100% !important; */
             }
 
                 .well-offset-color table caption {
                     font-size: 150% !important;
-                    color: #637A90;
+                    color: rgb(14, 41, 83);
                 }
 
 
@@ -126,7 +117,6 @@
         #payment-summary .panel-default {
             background-color: #213244 !important;
             color:white;
-            
         }
 
         #payment-summary .panel{
@@ -148,6 +138,8 @@
         #payment-summary .bank-info {
             /*color:#213244;*/
             color:white; 
+            background-color: #3C4C5A !important;
+            border-radius: 0px !important;            
         }
 
         #payment-summary .panel-footer {
@@ -191,3 +183,116 @@
           width: 100%;
         }
 
+
+
+        /* 2018  ADJUSTMENTS */
+        .panel {
+            -webkit-box-shadow: none;
+            -moz-box-shadow: none;
+            box-shadow: none;
+            border:none !important; 
+        }
+        .panel-heading {border-radius: 0px; }
+        .border-none {border:none !important; }
+        .border-none > .panel-heading {border:none !important;}
+
+        textarea { border-radius: 0px !important;}
+        input[type=text],input[type=email], input[type=number], select{
+            border:none !important;
+            border-bottom: 1px solid #eaeaea !important;
+            border-radius: 0px !important;
+            box-shadow: none !important;
+            background-color: transparent  !important;
+        }
+        .checkbox.form-control {
+            border:none !important;
+            border-bottom: 1px solid #eaeaea !important;
+            border-radius: 0px !important;
+            box-shadow: none !important; 
+            background-color: transparent !important;
+        }
+
+
+        h1 { color: maroon;}
+
+        .form-bg {background: #fafafa;}
+        
+        .padding {padding:20px;}
+
+        .bordered { border:1px solid #a5a5a5; }
+
+        .white-bg { background-color: white !important;}
+
+        
+
+
+        .other-registrants::before {
+            background: #333;
+            position: relative;
+            top:-10px;
+            left:-10px;
+            color:white;
+            font-weight: bold;
+            padding:2px 5px;
+            font-size: 0.8em; 
+            visibility: hidden;
+        }
+        .other-registrants:nth-child(1)::before{content: "1."; visibility: visible;}
+        .other-registrants:nth-child(2)::before{content: "2.";visibility: visible; top:0px;}
+        .other-registrants:nth-child(3)::before{content: "3."; visibility: visible;}
+        .other-registrants:nth-child(4)::before{content: "4.";visibility: visible; top:0px;}
+        .other-registrants:nth-child(5)::before{content: "5."; visibility: visible;}
+        .other-registrants:nth-child(6)::before{content: "6.";visibility: visible; top:0px;}
+        .other-registrants:nth-child(7)::before{content: "7."; visibility: visible;}
+        .other-registrants:nth-child(8)::before{content: "8.";visibility: visible; top:0px;}
+        .other-registrants:nth-child(9)::before{content: "9."; visibility: visible;}
+        .other-registrants:nth-child(10)::before{content: "10.";visibility: visible; top:0px;}
+        .other-registrants:nth-child(11)::before{content: "11."; visibility: visible;}
+        .other-registrants:nth-child(12)::before{content: "12.";visibility: visible; top:0px;}
+        .other-registrants:nth-child(13)::before{content: "13."; visibility: visible;}
+        .other-registrants:nth-child(14)::before{content: "14.";visibility: visible; top:0px;}        
+
+        .other-registrants {
+            padding:10px 0px 20px 10px;
+            border-top: 1px solid #fafafa;
+            background: #f5f5f5;
+        }
+
+        .row.other-registrants:nth-child(even) {background: #fff !important;}
+        .row.other-registrants:nth-child(2n) {background: #fff !important;}
+       
+        .early-bird {
+            background-color: #333;
+            color:white;
+        }
+        .standard-price {
+            background-color: #ccc;
+            
+        }
+        .text-bold { font-weight: bold;}
+
+
+        /* // Medium devices (tablets, 768px and up) */
+        @media (max-width: 768px) { 
+            .btn-remove-row {
+                width:100% !important;
+            }            
+            .btn-remove-row span {
+                visibility: hidden;
+            }                
+            .btn-remove-row span::before {
+                content: " REMOVE REGISTRANT";
+                visibility: visible;
+            }
+        }
+
+
+        /* VALIDATION ERRORS */
+        input.validate-error {
+            background: rgb(251, 221, 226) !important;
+            
+        }
+        label.validate-error {
+            color: #FF8B8B;
+            font-weight: normal !important;
+        }
